   (to support running with old versions of libassuan), please define
   ASSUAN_REALLY_REQUIRE_OLD_WAY_OF_SYSTEM_NPTH before including
   <assuan.h>.  [T5914]

 * No support for WindowsCE, any more.  [T6170]

 * Implement timeout in assuan_sock_connect_byname.  [T3302]

 * Interface changes relative to the 3.0.0 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 assuan_sock_accept   NEW.


Noteworthy changes in version 2.5.5 (2021-03-22) [C8/A8/R5]
------------------------------------------------

 * Allows starting servers with Unicode names on Windows.  [#4398]

 * Fix a crash in the logging code.  [0dd8ffbd32]

 * Upgrade autoconf stuff.

 Release-info: https://dev.gnupg.org/T5354


Noteworthy changes in version 2.5.4 (2020-10-23) [C8/A8/R4]
------------------------------------------------

 * Support Unicode socket names on Windows.

 * Fix some minor build annoyances.

 Release-info: https://dev.gnupg.org/T5112


Noteworthy changes in version 2.5.3 (2019-02-11) [C8/A8/R3]
------------------------------------------------

 * Add a timeout for writing to a SOCKS5 proxy.  This helps if another
   service is running on the standard tor socket (e.g. Windows 10).
   [#3381]

 * Add workaround for a problem with LD_LIBRARY_PATH on newer systems.
   [#4298]

 Release-info: https://dev.gnupg.org/T4361


Noteworthy changes in version 2.5.2 (2018-12-13) [C8/A8/R2]
------------------------------------------------

 * Better credential support for BSDs.

 * Fix some compiler warnings.

 * Update the build system.


Noteworthy changes in version 2.5.1 (2017-12-07) [C8/A8/R1]
------------------------------------------------

 * Fix c+p error in the previous usleep fix.


Noteworthy changes in version 2.5.0 (2017-12-07) [C8/A8/R0]
------------------------------------------------

 * New function to change the system hooks for the socket
   interface. [#3378]

 * Fix the use of the internal usleep in the nPth implementation.
