@@ -106,6 +106,8 @@ LIBASSUAN_1.0 {
     assuan_sock_connect_byname;
     assuan_sock_set_system_hooks;
     assuan_sock_accept;
+    assuan_pipe_wait_server_termination;
+    assuan_pipe_kill_server;
 
     __assuan_close;
     __assuan_pipe;
